crates/lang-parse/tests/snapshots/parser__parser_if-else.snap
---
source: crates/lang-parse/tests/parser.rs
expression: parse(input)
---
Ok(
    Ast {
        span: 0..25,
        statements: StatementList {
            span: 0..25,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [
                (
                    Expression(
                        ExpressionStatement {
                            span: 0..25,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            attr: [],
                            expr: If(
                                If {
                                    span: 0..25,
                                    if_span: 0..2,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    condition: BinaryOperation(
                                        BinaryOperation {
                                            span: 3..9,
                                            lhs: QualifiedName(
                                                QualifiedName {
                                                    span: 3..4,
                                                    extras: ItemExtras {
                                                        leading: LeadingExtras(
                                                            [],
                                                        ),
                                                        trailing: TrailingExtras(
                                                            [
                                                                Whitespace(
                                                                    Whitespace(
                                                                        " ",
                                                                    ),
                                                                ),
                                                            ],
                                                        ),
                                                    },
                                                    parts: [
                                                        Identifier {
                                                            span: 3..4,
                                                            name: "a",
                                                        },
                                                    ],
                                                },
                                            ),
                                            op: Spanned {
                                                span: 5..6,
                                                value: GreaterThan,
                                            },
                                            rhs: Literal(
                                                Literal {
                                                    span: 7..9,
                                                    extras: ItemExtras {
                                                        leading: LeadingExtras(
                                                            [],
                                                        ),
                                                        trailing: TrailingExtras(
                                                            [
                                                                Whitespace(
                                                                    Whitespace(
                                                                        " ",
                                                                    ),
                                                                ),
                                                            ],
                                                        ),
                                                    },
                                                    literal: Integer(
                                                        IntegerLiteral {
                                                            span: 7..8,
                                                            value: 1,
                                                            raw: "1",
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                    body: Body {
                                        span: 9..14,
                                        statements: StatementList {
                                            span: 10..13,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [
                                                        Whitespace(
                                                            Whitespace(
                                                                " ",
                                                            ),
                                                        ),
                                                    ],
                                                ),
                                                trailing: TrailingExtras(
                                                    [],
                                                ),
                                            },
                                            statements: [],
                                            tail: Some(
                                                ExpressionStatement {
                                                    span: 11..13,
                                                    extras: ItemExtras {
                                                        leading: LeadingExtras(
                                                            [],
                                                        ),
                                                        trailing: TrailingExtras(
                                                            [],
                                                        ),
                                                    },
                                                    attr: [],
                                                    expr: Literal(
                                                        Literal {
                                                            span: 11..13,
                                                            extras: ItemExtras {
                                                                leading: LeadingExtras(
                                                                    [],
                                                                ),
                                                                trailing: TrailingExtras(
                                                                    [
                                                                        Whitespace(
                                                                            Whitespace(
                                                                                " ",
                                                                            ),
                                                                        ),
                                                                    ],
                                                                ),
                                                            },
                                                            literal: Integer(
                                                                IntegerLiteral {
                                                                    span: 11..12,
                                                                    value: 3,
                                                                    raw: "3",
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                    },
                                    next_if_span: None,
                                    next_if: None,
                                    else_span: Some(
                                        15..19,
                                    ),
                                    else_body: Some(
                                        Body {
                                            span: 20..25,
                                            statements: StatementList {
                                                span: 21..24,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [
                                                            Whitespace(
                                                                Whitespace(
                                                                    " ",
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                statements: [],
                                                tail: Some(
                                                    ExpressionStatement {
                                                        span: 22..24,
                                                        extras: ItemExtras {
                                                            leading: LeadingExtras(
                                                                [],
                                                            ),
                                                            trailing: TrailingExtras(
                                                                [],
                                                            ),
                                                        },
                                                        attr: [],
                                                        expr: Literal(
                                                            Literal {
                                                                span: 22..24,
                                                                extras: ItemExtras {
                                                                    leading: LeadingExtras(
                                                                        [],
                                                                    ),
                                                                    trailing: TrailingExtras(
                                                                        [
                                                                            Whitespace(
                                                                                Whitespace(
                                                                                    " ",
                                                                                ),
                                                                            ),
                                                                        ],
                                                                    ),
                                                                },
                                                                literal: Integer(
                                                                    IntegerLiteral {
                                                                        span: 22..23,
                                                                        value: 4,
                                                                        raw: "4",
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    TrailingExtras(
                        [],
                    ),
                ),
            ],
            tail: None,
        },
    },
)
