crates/lang-parse/tests/snapshots/parser__parser_if.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x1219953d20c15137",
        output_hash: "0xbdca1f0b8e501743",
        tree: (
            span: (
                start: 0,
                end: 19,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 19,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Expression((
                        span: (
                            start: 0,
                            end: 19,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        expr: If((
                            span: (
                                start: 0,
                                end: 19,
                            ),
                            if_span: (
                                start: 0,
                                end: 2,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            condition: BinaryOperation((
                                span: (
                                    start: 3,
                                    end: 9,
                                ),
                                lhs: SymbolPath((
                                    span: (
                                        start: 3,
                                        end: 5,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([
                                            Whitespace((" ")),
                                        ]),
                                    ),
                                    prefix: None,
                                    parts: [
                                        (
                                            span: (
                                                start: 3,
                                                end: 4,
                                            ),
                                            name: "a",
                                        ),
                                    ],
                                )),
                                op: (
                                    span: (
                                        start: 5,
                                        end: 6,
                                    ),
                                    value: GreaterThan,
                                ),
                                rhs: Literal((
                                    span: (
                                        start: 7,
                                        end: 9,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([
                                            Whitespace((" ")),
                                        ]),
                                    ),
                                    literal: Integer((
                                        span: (
                                            start: 7,
                                            end: 8,
                                        ),
                                        value: "1",
                                    )),
                                )),
                            )),
                            body: (
                                span: (
                                    start: 9,
                                    end: 19,
                                ),
                                statements: (
                                    span: (
                                        start: 10,
                                        end: 18,
                                    ),
                                    extras: (
                                        leading: ([
                                            Whitespace((" ")),
                                        ]),
                                        trailing: ([]),
                                    ),
                                    statements: [
                                        (Expression((
                                            span: (
                                                start: 11,
                                                end: 16,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([]),
                                            ),
                                            attr: ([]),
                                            expr: Call((
                                                span: (
                                                    start: 11,
                                                    end: 16,
                                                ),
                                                extras: (
                                                    leading: ([]),
                                                    trailing: ([]),
                                                ),
                                                name: (
                                                    span: (
                                                        start: 11,
                                                        end: 14,
                                                    ),
                                                    extras: (
                                                        leading: ([]),
                                                        trailing: ([]),
                                                    ),
                                                    prefix: None,
                                                    parts: [
                                                        (
                                                            span: (
                                                                start: 11,
                                                                end: 14,
                                                            ),
                                                            name: "foo",
                                                        ),
                                                    ],
                                                ),
                                                arguments: (
                                                    span: (
                                                        start: 15,
                                                        end: 15,
                                                    ),
                                                    extras: (
                                                        leading: ([]),
                                                        trailing: ([]),
                                                    ),
                                                    arguments: [],
                                                ),
                                            )),
                                        )), ([
                                            Whitespace((" ")),
                                        ])),
                                    ],
                                    tail: None,
                                ),
                            ),
                            next_if_span: None,
                            next_if: None,
                            else_span: None,
                            else_body: None,
                        )),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
