crates/lang-parse/tests/snapshots/parser__parser_inner attribute.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: 16014346051756756399,
        tree: (
            inner: (
                span: (
                    start: 0,
                    end: 10,
                ),
                statements: (
                    span: (
                        start: 0,
                        end: 10,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    statements: [
                        (InnerAttribute((
                            span: (
                                start: 0,
                                end: 10,
                            ),
                            is_inner: true,
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            commands: [
                                Ident((
                                    span: (
                                        start: 3,
                                        end: 9,
                                    ),
                                    name: "export",
                                )),
                            ],
                        )), ([])),
                    ],
                    tail: None,
                ),
            ),
            hash: 3866994771152681731,
        ),
    ),
)
---
