crates/lang-parse/tests/snapshots/parser__parser_int overflow.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x62e789218344d61f",
        output_hash: "0xbbf08c41d1af42bf",
        tree: (
            span: (
                start: 0,
                end: 19,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 19,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 19,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: Literal((
                        span: (
                            start: 0,
                            end: 19,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        literal: Error((
                            span: (
                                start: 0,
                                end: 19,
                            ),
                            kind: "number too large to fit in target type",
                        )),
                    )),
                )),
            ),
        ),
    ),
)
---
