crates/lang-parse/tests/snapshots/parser__parser_leading dot.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x17b996f21c672f82",
        output_hash: "0x7c604f8ab025f43a",
        tree: (
            span: (
                start: 0,
                end: 2,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 2,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 2,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: Literal((
                        span: (
                            start: 0,
                            end: 2,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        literal: Float((
                            span: (
                                start: 0,
                                end: 2,
                            ),
                            value: ".1",
                        )),
                    )),
                )),
            ),
        ),
    ),
)
---
